ass4/target/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'['", "']'", 
                     "'('", "')'", "';'", "','", "':'", "'..'", "<INVALID>", 
                     "':='", "'+'", "'*'", "'-'", "'/'", "'<>'", "'='", 
                     "'<'", "'>'", "'<='", "'>='" ]

    symbolicNames = [ "<INVALID>", "TRADITIONAL_CMT", "BLOCK_CMT", "LINE_CMT", 
                      "NO", "BEGIN", "END", "PROCEDURE", "FUNCTION", "IF", 
                      "THEN", "ELSE", "WHILE", "DO", "FOR", "TO", "DOWNTO", 
                      "BREAK", "CONTINUE", "RETURN", "WITH", "VAR", "BOOLEANTYPE", 
                      "INTTYPE", "REALTYPE", "STRINGTYPE", "ARRAY", "OF", 
                      "NOT", "OR", "AND", "DIV", "MOD", "TRUE", "FALSE", 
                      "INTLIT", "BOOLLIT", "REALLIT", "STRINGLIT", "LSB", 
                      "RSB", "LB", "RB", "SEMI", "COMMA", "COLON", "DD", 
                      "WS", "ASSIGN", "ADDOP", "MULOP", "SUBOP", "DIVOP", 
                      "NEQ", "EQ", "LT", "GT", "LTE", "GTE", "ID", "ERROR_CHAR", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_ptypes = 2
    RULE_ctypes = 3
    RULE_index = 4
    RULE_lower = 5
    RULE_varblock = 6
    RULE_var_dec = 7
    RULE_listid = 8
    RULE_procblock = 9
    RULE_funcblock = 10
    RULE_funcall = 11
    RULE_list_exp = 12
    RULE_para_call = 13
    RULE_listpara = 14
    RULE_return_type = 15
    RULE_compound_stt = 16
    RULE_liststt = 17
    RULE_funcall_stt = 18
    RULE_statements = 19
    RULE_breakstatement = 20
    RULE_continuestatement = 21
    RULE_returnstatement = 22
    RULE_assignment = 23
    RULE_idassign = 24
    RULE_ifstatement = 25
    RULE_ifnostatement = 26
    RULE_whilestatement = 27
    RULE_forstatement = 28
    RULE_typefor = 29
    RULE_identifier = 30
    RULE_withstatement = 31
    RULE_list_var_dec = 32
    RULE_orelse = 33
    RULE_andthen = 34
    RULE_exp = 35
    RULE_exp1 = 36
    RULE_op1 = 37
    RULE_exp2 = 38
    RULE_exp3 = 39
    RULE_exp4 = 40
    RULE_unary = 41
    RULE_indexexp = 42
    RULE_literal = 43

    ruleNames =  [ "program", "declaration", "ptypes", "ctypes", "index", 
                   "lower", "varblock", "var_dec", "listid", "procblock", 
                   "funcblock", "funcall", "list_exp", "para_call", "listpara", 
                   "return_type", "compound_stt", "liststt", "funcall_stt", 
                   "statements", "breakstatement", "continuestatement", 
                   "returnstatement", "assignment", "idassign", "ifstatement", 
                   "ifnostatement", "whilestatement", "forstatement", "typefor", 
                   "identifier", "withstatement", "list_var_dec", "orelse", 
                   "andthen", "exp", "exp1", "op1", "exp2", "exp3", "exp4", 
                   "unary", "indexexp", "literal" ]

    EOF = Token.EOF
    TRADITIONAL_CMT=1
    BLOCK_CMT=2
    LINE_CMT=3
    NO=4
    BEGIN=5
    END=6
    PROCEDURE=7
    FUNCTION=8
    IF=9
    THEN=10
    ELSE=11
    WHILE=12
    DO=13
    FOR=14
    TO=15
    DOWNTO=16
    BREAK=17
    CONTINUE=18
    RETURN=19
    WITH=20
    VAR=21
    BOOLEANTYPE=22
    INTTYPE=23
    REALTYPE=24
    STRINGTYPE=25
    ARRAY=26
    OF=27
    NOT=28
    OR=29
    AND=30
    DIV=31
    MOD=32
    TRUE=33
    FALSE=34
    INTLIT=35
    BOOLLIT=36
    REALLIT=37
    STRINGLIT=38
    LSB=39
    RSB=40
    LB=41
    RB=42
    SEMI=43
    COMMA=44
    COLON=45
    DD=46
    WS=47
    ASSIGN=48
    ADDOP=49
    MULOP=50
    SUBOP=51
    DIVOP=52
    NEQ=53
    EQ=54
    LT=55
    GT=56
    LTE=57
    GTE=58
    ID=59
    ERROR_CHAR=60
    ILLEGAL_ESCAPE=61
    UNCLOSE_STRING=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclarationContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 88
                self.declaration()
                self.state = 91 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.PROCEDURE) | (1 << MPParser.FUNCTION) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 93
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varblock(self):
            return self.getTypedRuleContext(MPParser.VarblockContext,0)


        def funcblock(self):
            return self.getTypedRuleContext(MPParser.FuncblockContext,0)


        def procblock(self):
            return self.getTypedRuleContext(MPParser.ProcblockContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MPParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.varblock()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.funcblock()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.procblock()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PtypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEANTYPE(self):
            return self.getToken(MPParser.BOOLEANTYPE, 0)

        def INTTYPE(self):
            return self.getToken(MPParser.INTTYPE, 0)

        def REALTYPE(self):
            return self.getToken(MPParser.REALTYPE, 0)

        def STRINGTYPE(self):
            return self.getToken(MPParser.STRINGTYPE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_ptypes

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPtypes" ):
                return visitor.visitPtypes(self)
            else:
                return visitor.visitChildren(self)




    def ptypes(self):

        localctx = MPParser.PtypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ptypes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.BOOLEANTYPE) | (1 << MPParser.INTTYPE) | (1 << MPParser.REALTYPE) | (1 << MPParser.STRINGTYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CtypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def index(self):
            return self.getTypedRuleContext(MPParser.IndexContext,0)


        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def ptypes(self):
            return self.getTypedRuleContext(MPParser.PtypesContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_ctypes

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCtypes" ):
                return visitor.visitCtypes(self)
            else:
                return visitor.visitChildren(self)




    def ctypes(self):

        localctx = MPParser.CtypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ctypes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(MPParser.ARRAY)
            self.state = 103
            self.match(MPParser.LSB)
            self.state = 104
            self.index()
            self.state = 105
            self.match(MPParser.RSB)
            self.state = 106
            self.match(MPParser.OF)
            self.state = 107
            self.ptypes()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IndexContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lower(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.LowerContext)
            else:
                return self.getTypedRuleContext(MPParser.LowerContext,i)


        def DD(self):
            return self.getToken(MPParser.DD, 0)

        def getRuleIndex(self):
            return MPParser.RULE_index

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndex" ):
                return visitor.visitIndex(self)
            else:
                return visitor.visitChildren(self)




    def index(self):

        localctx = MPParser.IndexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_index)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.lower()
            self.state = 110
            self.match(MPParser.DD)
            self.state = 111
            self.lower()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LowerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MPParser.INTLIT, 0)

        def SUBOP(self):
            return self.getToken(MPParser.SUBOP, 0)

        def getRuleIndex(self):
            return MPParser.RULE_lower

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLower" ):
                return visitor.visitLower(self)
            else:
                return visitor.visitChildren(self)




    def lower(self):

        localctx = MPParser.LowerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_lower)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBOP:
                self.state = 113
                self.match(MPParser.SUBOP)


            self.state = 116
            self.match(MPParser.INTLIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarblockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def var_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Var_decContext)
            else:
                return self.getTypedRuleContext(MPParser.Var_decContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_varblock

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarblock" ):
                return visitor.visitVarblock(self)
            else:
                return visitor.visitChildren(self)




    def varblock(self):

        localctx = MPParser.VarblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varblock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(MPParser.VAR)
            self.state = 122 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 119
                self.var_dec()
                self.state = 120
                self.match(MPParser.SEMI)
                self.state = 124 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listid(self):
            return self.getTypedRuleContext(MPParser.ListidContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def ptypes(self):
            return self.getTypedRuleContext(MPParser.PtypesContext,0)


        def ctypes(self):
            return self.getTypedRuleContext(MPParser.CtypesContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_var_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_dec" ):
                return visitor.visitVar_dec(self)
            else:
                return visitor.visitChildren(self)




    def var_dec(self):

        localctx = MPParser.Var_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_dec)
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.listid()
                self.state = 127
                self.match(MPParser.COLON)
                self.state = 128
                self.ptypes()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.listid()
                self.state = 131
                self.match(MPParser.COLON)
                self.state = 132
                self.ctypes()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListidContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def COMMA(self):
            return self.getToken(MPParser.COMMA, 0)

        def listid(self):
            return self.getTypedRuleContext(MPParser.ListidContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_listid

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListid" ):
                return visitor.visitListid(self)
            else:
                return visitor.visitChildren(self)




    def listid(self):

        localctx = MPParser.ListidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_listid)
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(MPParser.ID)
                self.state = 137
                self.match(MPParser.COMMA)
                self.state = 138
                self.listid()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.match(MPParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcblockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compound_stt(self):
            return self.getTypedRuleContext(MPParser.Compound_sttContext,0)


        def listpara(self):
            return self.getTypedRuleContext(MPParser.ListparaContext,0)


        def varblock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VarblockContext)
            else:
                return self.getTypedRuleContext(MPParser.VarblockContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_procblock

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcblock" ):
                return visitor.visitProcblock(self)
            else:
                return visitor.visitChildren(self)




    def procblock(self):

        localctx = MPParser.ProcblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_procblock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(MPParser.PROCEDURE)
            self.state = 143
            self.match(MPParser.ID)
            self.state = 144
            self.match(MPParser.LB)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 145
                self.listpara()


            self.state = 148
            self.match(MPParser.RB)
            self.state = 149
            self.match(MPParser.SEMI)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.VAR:
                self.state = 150
                self.varblock()
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 156
            self.compound_stt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncblockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def return_type(self):
            return self.getTypedRuleContext(MPParser.Return_typeContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compound_stt(self):
            return self.getTypedRuleContext(MPParser.Compound_sttContext,0)


        def listpara(self):
            return self.getTypedRuleContext(MPParser.ListparaContext,0)


        def varblock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VarblockContext)
            else:
                return self.getTypedRuleContext(MPParser.VarblockContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_funcblock

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncblock" ):
                return visitor.visitFuncblock(self)
            else:
                return visitor.visitChildren(self)




    def funcblock(self):

        localctx = MPParser.FuncblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcblock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(MPParser.FUNCTION)
            self.state = 159
            self.match(MPParser.ID)
            self.state = 160
            self.match(MPParser.LB)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 161
                self.listpara()


            self.state = 164
            self.match(MPParser.RB)
            self.state = 165
            self.match(MPParser.COLON)
            self.state = 166
            self.return_type()
            self.state = 167
            self.match(MPParser.SEMI)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.VAR:
                self.state = 168
                self.varblock()
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 174
            self.compound_stt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def list_exp(self):
            return self.getTypedRuleContext(MPParser.List_expContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_funcall

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncall" ):
                return visitor.visitFuncall(self)
            else:
                return visitor.visitChildren(self)




    def funcall(self):

        localctx = MPParser.FuncallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_funcall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(MPParser.ID)
            self.state = 177
            self.match(MPParser.LB)
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.NOT) | (1 << MPParser.TRUE) | (1 << MPParser.FALSE) | (1 << MPParser.INTLIT) | (1 << MPParser.REALLIT) | (1 << MPParser.STRINGLIT) | (1 << MPParser.LB) | (1 << MPParser.SUBOP) | (1 << MPParser.ID))) != 0):
                self.state = 178
                self.list_exp()

